   templates to a configurable maximum. Also, a race condition in the template
   loader was fixed by adding locking.
 * A new filter (genshi.filters.HTMLFormFiller) was added, which can populate 
   HTML forms based on a dictionary of values.
 * The set of permitted tag and attribute names for the HTMLSanitizer can now
   be configured per instance.


Version 0.3.1
http://svn.edgewall.org/repos/genshi/tags/0.3.1/
(Sep 22 2006, from branches/stable/0.3.x)

 * Includes and user-defined filters were not getting the correct context data
   when used inside a match template (ticket #56).
 * XPath patterns using the union operator (`|`) were returning only partial
   results in some cases.


Version 0.3
http://svn.edgewall.org/repos/genshi/tags/0.3.0/
(Sep 17 2006, from branches/stable/0.3.x)

 * The project name was changed from "Markup" to "Genshi". See UPGRADE.txt
   for upgrade instructions.
 * Expression evaluation now differentiates between undefined variables and
   variables that are defined but set to `None`. This also means that local
   variables can override built-ins even if the local variable are set to
   `None` (ticket #36).
 * The plugin implementation now makes more functions available for use inside
   templates: XML(), HTML(), defined(), and value-of(). These are mostly for
   migration from Kid.
 * The parsing of `py:with` directives has been improved: you can now assign
   to multiple names, and semicolons inside string literals are treated as
   expected.
 * Generator expressions can now be used in template expressions (ticket #16).
 * Added serialization to plain text (ticket #41).
 * Calling functions from template expressions with *args and/or **kwargs
   now works correctly (ticket #42).
 * The `TemplateLoader` class and the `Template` instances that it manages are
   now thread-safe, as they no longer keep any state related to the current
   processing context.
 * Stream filters and serializers can now be applied using the "pipe" (bitwise